[gd_scene load_steps=2 format=4 uid="uid://game_over_screen"]

[ext_resource type="Script" path="res://scripts/ui/GameOverScreen.gd" id="1_script"]

[node name="GameOverScreen" type="CanvasLayer"]
layer = 10
process_mode = 3
script = ExtResource("1_script")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(200, 120)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "GAME OVER"
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "The darkness has fallen..."
horizontal_alignment = 1
autowrap_mode = 2

[node name="RestartButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Restart"
